#2250 Logback configuration issue and suppress JDK24 warnings.